# python-examples

.github/workflows/: action.yaml
Examples/encoder/: pyproject.toml
Examples/encoder/src/encoder/: encoder.py  encoder_cli.py
encoder/: README.md  pyproject.toml
encoder/.github/: action.yaml
encoder/src/encoder/: encoder.py  test_encoder.py
examples/encoder/src/encoder/: encoder-cli.py
