[project]
name = "encoder"
version = "0.1.0"
description = "Simple encoder application with CLI functionality"
authors = [
    { name = "Josh Winchester", email = "jwinchester23@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.4.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/encoder"]
